--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex hvr-rectangle-out " data-aos="fade-up" data-aos-delay="200">
-            <div class="icon flex-shrink-0"><i class="bi bi-shield-lock" style="color: #15a04a;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-shield-lock" style="color: #2b5e96;"></i></div>
             <div>
               <h4 class="title">Anonymization</h4>
               <p class="description">Protect data and model privacy and security with homomorphic encryption, safeguarding user and company information.
@@ -245,7 +245,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon flex-shrink-0"><i class="bi bi-arrows-collapse" style="color: #d90769;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-arrows-collapse" style="color: #2b5e96;"></i></div>
             <div>
               <h4 class="title">Compression</h4>
               <p class="description">Optimize model performance with advanced quantization and pruning techniques, reducing size and complexity without sacrificing accuracy.              </p>
@@ -254,7 +254,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon flex-shrink-0"><i class="bi bi-bar-chart" style="color: #15bfbc;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-bar-chart" style="color: #2b5e96;"></i></div>
             <div>
               <h4 class="title">Benchmarking</h4>
               <p class="description">Evaluate and improve your AI system with specialized benchmarks, safety metrics, and performance evaluations under various conditions.              </p>
@@ -263,7 +263,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-shield-check" style="color: #f5cf13;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-shield-check" style="color: #2b5e96;"></i></div>
             <div>
               <h4 class="title">Algorithmic Protection              </h4>
               <p class="description">Control and protect AI usage with rejection sampling, algorithmic moderation, and internal testing to meet regulatory standards.              </p>
@@ -272,7 +272,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0"><i class="bi bi-file-lock" style="color: #1335f5;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-file-lock" style="color: #2b5e96;"></i></div>
             <div>
               <h4 class="title">GenAI Safety              </h4>
               <p class="description">Maintain data and model security with updated repositories, data leak detection, and internal monitoring to prevent threats.</p>
@@ -281,7 +281,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex " data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0"><i class="bi bi-shield-slash" style="color: #1335f5;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-shield-slash" style="color: #2b5e96;"></i></div>
             <div>
               <h4 class="title">Evolving Threat Management              </h4>
               <p class="description">Manage emerging threats with a specialized team in AI and cybersecurity, ensuring continuous protection for your system.              </p>
@@ -328,7 +328,7 @@
               <div class="row gy-4">
       
                 <div class="col-lg-4 col-md-6 features-item d-flex" data-aos="fade-up" data-aos-delay="100">
-                  <div class="icon flex-shrink-0"><i class="bi bi-eye" style="color: #f57813;"></i></div>
+                  <div class="icon flex-shrink-0"><i class="bi bi-eye" style="color: #2b5e96;"></i></div>
                   <div>
                     <h4 class="title">AI and Data Engineering Consulting
                     </h4>
@@ -339,7 +339,7 @@
                 <!-- End Service Item -->
       
                 <div class="col-lg-4 col-md-6 features-item d-flex" data-aos="fade-up" data-aos-delay="200">
-                  <div class="icon flex-shrink-0"><i class="bi bi-shield-lock" style="color: #15a04a;"></i></div>
+                  <div class="icon flex-shrink-0"><i class="bi bi-shield-lock" style="color: #2b5e96;"></i></div>
                   <div>
                     <h4 class="title">Personalized Solutions for Medium, Big Companies, and Fortune 500
                     </h4>
