--- a/about.html
+++ b/about.html
@@ -245,12 +245,12 @@
                 <div class="member-img">
                   <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
                   <div class="social">
-                    <a href="https://www.linkedin.com/in/azariel-yomal-0a8b18148/"><i class="bi bi-linkedin"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Azariel Yomal</h4>
-                  <span>Advisors</span>
+                  <h4>Maximilian Yomal</h4>
+                  <span>Advisor</span>
                 </div>
               </div>
             </div><!-- End Team Member -->
@@ -260,11 +260,11 @@
                 <div class="member-img">
                   <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
                   <div class="social">
-                    <a href="https://www.linkedin.com/in/asquith/"><i class="bi bi-linkedin"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Michael Freedman</h4>
+                  <h4>Micaela Freedman</h4>
                   <span>Advisor</span>
                 </div>
               </div>
