--- a/service-details.html
+++ b/service-details.html
@@ -217,9 +217,10 @@
   </footer>
 
 
-  <div id="cookie-banner" class="cookie-banner">
-    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="#">Cookie Policy</a>. You can adjust your browser settings to manage or disable cookies.</p>
+  <div id="cookie-banner" class="cookie-banner" style="display: none;">
+    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="#">Cookie Policy</a>.<br> You can adjust your browser settings to manage or disable cookies.</p>
     <button id="accept-cookies">Accept</button>
+    <button id="deny-cookies">Deny</button>
 </div>
 
 
