--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/favicon.png" alt="">
         <h1 class="sitename">Ultra Deep Tech</h1>
       </a>
   
@@ -45,32 +44,32 @@
           <li class="dropdown"><a href="about.html"><span>About Us</span>
             <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Company History</a></li>
-              <li><a href="#">Leadership Team</a></li>
-              <li><a href="#">Values and Ethics</a></li>
-              <li><a href="#">Corporate Social Responsibility (CSR)</a></li>
+              <li><a href="about.html#company-history">Company History</a></li>
+              <li><a href="about.html#team">Leadership Team</a></li>
+              <li><a href="about.html#values-ethics">Values and Ethics</a></li>
+              <li><a href="about.html#csr">Corporate Social Responsibility (CSR)</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="productsdetails.html"><span>Products & Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Interpretability</a></li>
-              <li><a href="#">Anonymization</a></li>
-              <li><a href="#">Compression</a></li>
-              <li><a href="#">Benchmarking</a></li>
-              <li><a href="#">GenAI Safety</a></li>
-              <li><a href="#">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-1">Interpretability</a></li>
+              <li><a href="productsdetails.html#product-2">Anonymization</a></li>
+              <li><a href="productsdetails.html#product-3">Compression</a></li>
+              <li><a href="productsdetails.html#product-4">Benchmarking</a></li>
+              <li><a href="productsdetails.html#product-5">GenAI Safety</a></li>
+              <li><a href="productsdetails.html#product-6">Evolving Threat Management</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="service-details.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">AI and Data Engineering Consulting</a></li>
-              <li><a href="#">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
-              <li><a href="#">Case Studies and Client Testimonials</a></li>
-              <li><a href="#">Service Packages and Pricing</a></li>
+              <li><a href="service-details.html#service-1">AI and Data Engineering Consulting</a></li>
+              <li><a href="service-details.html#service-2">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
+              <li><a href="service-details.html">Case Studies and Client Testimonials</a></li>
+              <li><a href="service-details.html">Service Packages and Pricing</a></li>
             </ul>
           </li>
   
-          <li class="dropdown"><a href="services.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href=""><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Current Job Openings</a></li>
               <li><a href="#">Life at Ultra Deep Tech </a></li>
@@ -82,9 +81,9 @@
   
           <li class="dropdown"><a href="contact.html"><span>Contact Us</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Office Locations</a></li>
-              <li><a href="#">Support and Inquiries</a></li>
-              <li><a href="#">Chat with Us</a></li>
+              <li><a href="contact.html">Office Locations</a></li>
+              <li><a href="contact.html">Support and Inquiries</a></li>
+              <li><a href="contact.html">Chat with Us</a></li>
             </ul>
           </li>
         </ul>
