--- a/index.html
+++ b/index.html
@@ -48,26 +48,26 @@
           <li class="dropdown"><a href="about.html"><span>About Us</span>
             <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="about.html">Company History</a></li>
-              <li><a href="about.html">Leadership Team</a></li>
-              <li><a href="about.html">Values and Ethics</a></li>
-              <li><a href="about.html">Corporate Social Responsibility (CSR)</a></li>
+              <li><a href="about.html#company-history">Company History</a></li>
+              <li><a href="about.html#team">Leadership Team</a></li>
+              <li><a href="about.html#values-ethics">Values and Ethics</a></li>
+              <li><a href="about.html#csr">Corporate Social Responsibility (CSR)</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="productsdetails.html"><span>Products & Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="productsdetails.html">Interpretability</a></li>
-              <li><a href="productsdetails.html">Anonymization</a></li>
-              <li><a href="productsdetails.html">Compression</a></li>
-              <li><a href="productsdetails.html">Benchmarking</a></li>
-              <li><a href="productsdetails.html">GenAI Safety</a></li>
-              <li><a href="productsdetails.html">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-1">Interpretability</a></li>
+              <li><a href="productsdetails.html#product-2">Anonymization</a></li>
+              <li><a href="productsdetails.html#product-3">Compression</a></li>
+              <li><a href="productsdetails.html#product-4">Benchmarking</a></li>
+              <li><a href="productsdetails.html#product-5">GenAI Safety</a></li>
+              <li><a href="productsdetails.html#product-6">Evolving Threat Management</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="service-details.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="service-details.html">AI and Data Engineering Consulting</a></li>
-              <li><a href="service-details.html">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
+              <li><a href="service-details.html#service-1">AI and Data Engineering Consulting</a></li>
+              <li><a href="service-details.html#service-2">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
               <li><a href="service-details.html">Case Studies and Client Testimonials</a></li>
               <li><a href="service-details.html">Service Packages and Pricing</a></li>
             </ul>
