--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           <li class="dropdown"><a href="about.html"><span>About Us</span>
             <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="about.html#company-history">Company History</a></li>
-              <li><a href="about.html#team">Leadership Team</a></li>
-              <li><a href="about.html#values-ethics">Values and Ethics</a></li>
-              <li><a href="about.html#csr">Corporate Social Responsibility (CSR)</a></li>
+              <li><a href="about.html#company-history">∘ Company History</a></li>
+              <li><a href="about.html#team">∘ Leadership Team</a></li>
+              <li><a href="about.html#values-ethics">∘ Values and Ethics</a></li>
+              <li><a href="about.html#csr">∘ Corporate Social Responsibility (CSR)</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="productsdetails.html"><span>Products & Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
