--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
-      <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/favicon.png" alt="">
+      <a href="index.html" class="logo d-flex align-items-center imagenlogo">
+        <img src="assets/img/favicon.png" class="imagenlogo-img" alt="">
         <h1 class="sitename">Ultra Deep Tech</h1>
-      </a>
+    </a>
   
       <nav id="navmenu" class="navmenu">
         <ul>
           <li class="dropdown"><a href="about.html"><span>About Us</span>
             <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="about.html#company-history">∘ Company History</a></li>
-              <li><a href="about.html#team">∘ Leadership Team</a></li>
-              <li><a href="about.html#values-ethics">∘ Values and Ethics</a></li>
-              <li><a href="about.html#csr">∘ Corporate Social Responsibility (CSR)</a></li>
+              <li><a href="about.html#company-history">Company History</a></li>
+              <li><a href="about.html#team">Leadership Team</a></li>
+              <li><a href="about.html#values-ethics">Values and Ethics</a></li>
+              <li><a href="about.html#csr">Corporate Social Responsibility (CSR)</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="productsdetails.html"><span>Products & Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -399,8 +399,8 @@
               <li><a href="about.html">About us</a></li>
               <li><a href="productsdetails.html">Products & Solutions</a></li>
               <li><a href="services.html">Services</a></li>
-              <li><a href="termsofservice.html">Terms of service</a></li>
-              <li><a href="privacypolicy.html">Privacy policy</a></li>
+              <li><a href="politics.html">Terms of service</a></li>
+              <li><a href="politics.html">Privacy policy</a></li>
             </ul>
           </div>
 
