--- a/contact.html
+++ b/contact.html
@@ -205,8 +205,8 @@
               <li><a href="about.html">About us</a></li>
               <li><a href="productsdetails.html">Products & Solutions</a></li>
               <li><a href="services.html">Services</a></li>
-              <li><a href="termsofservice.html">Terms of service</a></li>
-              <li><a href="privacypolicy.html">Privacy policy</a></li>
+              <li><a href="politics.html">Terms of service</a></li>
+              <li><a href="politics.html">Privacy policy</a></li>
             </ul>
           </div>
 
