--- a/about.html
+++ b/about.html
@@ -306,8 +306,8 @@
               <li><a href="about.html">About us</a></li>
               <li><a href="productsdetails.html">Products & Solutions</a></li>
               <li><a href="services.html">Services</a></li>
-              <li><a href="termsofservice.html">Terms of service</a></li>
-              <li><a href="privacypolicy.html">Privacy policy</a></li>
+              <li><a href="politics.html">Terms of service</a></li>
+              <li><a href="politics.html">Privacy policy</a></li>
             </ul>
           </div>
 
@@ -347,7 +347,7 @@
 
 
   <div id="cookie-banner" class="cookie-banner" style="display: none;">
-    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="#">Cookie Policy</a>.<br> You can adjust your browser settings to manage or disable cookies.</p>
+    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="politics.html">Cookie Policy</a>.<br> You can adjust your browser settings to manage or disable cookies.</p>
     <button id="accept-cookies">Accept</button>
     <button id="deny-cookies">Deny</button>
 </div>
