--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div>
               <h4 class="title">Interpretability</h4>
               <p class="description">Simplify and understand your AI model with techniques for bias analysis, feature generation, and simple mathematical formulas.</p>
-              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="http://127.0.0.1:5500/productsdetails.html#product-1" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
@@ -240,7 +240,7 @@
               <h4 class="title">Anonymization</h4>
               <p class="description">Protect data and model privacy and security with homomorphic encryption, safeguarding user and company information.
               </p>
-              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html#product-2" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -249,7 +249,7 @@
             <div>
               <h4 class="title">Compression</h4>
               <p class="description">Optimize model performance with advanced quantization and pruning techniques, reducing size and complexity without sacrificing accuracy.              </p>
-              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html#product-3" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -258,25 +258,18 @@
             <div>
               <h4 class="title">Benchmarking</h4>
               <p class="description">Evaluate and improve your AI system with specialized benchmarks, safety metrics, and performance evaluations under various conditions.              </p>
-              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html#product-4" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-shield-check" style="color: #2b5e96;"></i></div>
-            <div>
-              <h4 class="title">Algorithmic Protection              </h4>
-              <p class="description">Control and protect AI usage with rejection sampling, algorithmic moderation, and internal testing to meet regulatory standards.              </p>
-              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div><!-- End Service Item -->
+          
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-file-lock" style="color: #2b5e96;"></i></div>
             <div>
               <h4 class="title">GenAI Safety              </h4>
               <p class="description">Maintain data and model security with updated repositories, data leak detection, and internal monitoring to prevent threats.</p>
-              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html#product-5" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -285,7 +278,15 @@
             <div>
               <h4 class="title">Evolving Threat Management              </h4>
               <p class="description">Manage emerging threats with a specialized team in AI and cybersecurity, ensuring continuous protection for your system.              </p>
-              <a href="./productsdetails.html" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html#product-6" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+            </div>
+          </div><!-- End Service Item -->
+          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+            <div class="icon flex-shrink-0"><i class="bi bi-shield-check" style="color: #2b5e96;"></i></div>
+            <div>
+              <h4 class="title">Algorithmic Protection              </h4>
+              <p class="description">Control and protect AI usage with rejection sampling, algorithmic moderation, and internal testing to meet regulatory standards.              </p>
+              <a href="./productsdetails.html#product-7" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
           
@@ -398,7 +399,7 @@
             <ul>
               <li><a href="about.html">About us</a></li>
               <li><a href="productsdetails.html">Products & Solutions</a></li>
-              <li><a href="services.html">Services</a></li>
+              <li><a href="service-details.html">Services</a></li>
               <li><a href="politics.html">Terms of service</a></li>
               <li><a href="politics.html">Privacy policy</a></li>
             </ul>
@@ -407,12 +408,13 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Products & Solution</h4>
             <ul>
-              <li><a href="#">Interpretability</a></li>
-              <li><a href="#">Anonymization</a></li>
-              <li><a href="#">Compression</a></li>
-              <li><a href="#">Benchmarking</a></li>
-              <li><a href="#">GenAI Safety</a></li>
-              <li><a href="#">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-1">Interpretability</a></li>
+              <li><a href="productsdetails.html#product-2">Anonymization</a></li>
+              <li><a href="productsdetails.html#product-3">Compression</a></li>
+              <li><a href="productsdetails.html#product-4">Benchmarking</a></li>
+              <li><a href="productsdetails.html#product-5">GenAI Safety</a></li>
+              <li><a href="productsdetails.html#product-6">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-7">Algorithmic Protection</a></li>
             </ul>
           </div>
 
@@ -439,7 +441,7 @@
   </footer>
 
   <div id="cookie-banner" class="cookie-banner" style="display: none;">
-    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="#">Cookie Policy</a>.<br> You can adjust your browser settings to manage or disable cookies.</p>
+    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="politics.html">Cookie Policy</a>.<br> You can adjust your browser settings to manage or disable cookies.</p>
     <button id="accept-cookies">Accept</button>
     <button id="deny-cookies">Deny</button>
 </div>
