--- a/politics.html
+++ b/politics.html
@@ -330,7 +330,7 @@ If you have any questions about our Cookie Policy, please contact us via contact
             <ul>
               <li><a href="about.html">About us</a></li>
               <li><a href="productsdetails.html">Products & Solutions</a></li>
-              <li><a href="services.html">Services</a></li>
+              <li><a href="service-details.html">Services</a></li>
               <li><a href="politics.html">Terms of service</a></li>
               <li><a href="politics.html">Privacy policy</a></li>
             </ul>
@@ -339,12 +339,13 @@ If you have any questions about our Cookie Policy, please contact us via contact
           <div class="col-lg-2 col-6 footer-links">
             <h4>Products & Solution</h4>
             <ul>
-              <li><a href="#">Interpretability</a></li>
-              <li><a href="#">Anonymization</a></li>
-              <li><a href="#">Compression</a></li>
-              <li><a href="#">Benchmarking</a></li>
-              <li><a href="#">GenAI Safety</a></li>
-              <li><a href="#">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-1">Interpretability</a></li>
+              <li><a href="productsdetails.html#product-2">Anonymization</a></li>
+              <li><a href="productsdetails.html#product-3">Compression</a></li>
+              <li><a href="productsdetails.html#product-4">Benchmarking</a></li>
+              <li><a href="productsdetails.html#product-5">GenAI Safety</a></li>
+              <li><a href="productsdetails.html#product-6">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-7">Algorithmic Protection</a></li>
             </ul>
           </div>
 
@@ -370,9 +371,8 @@ If you have any questions about our Cookie Policy, please contact us via contact
 
   </footer>
 
-
   <div id="cookie-banner" class="cookie-banner" style="display: none;">
-    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="#">Cookie Policy</a>.<br> You can adjust your browser settings to manage or disable cookies.</p>
+    <p>This website uses cookies to enhance your user experience. By continuing to browse, you agree to our <a href="politics.html">Cookie Policy</a>.<br> You can adjust your browser settings to manage or disable cookies.</p>
     <button id="accept-cookies">Accept</button>
     <button id="deny-cookies">Deny</button>
 </div>
