--- a/productsdetails.html
+++ b/productsdetails.html
@@ -126,6 +126,7 @@
                 <a href="#product-4" id="product-4-link"><i class="bi bi-arrow-right-circle"></i> Benchmarking<span></span></a>
                 <a href="#product-5" id="product-5-link"><i class="bi bi-arrow-right-circle"></i> GenAI Safety<span></span></a>
                 <a href="#product-6" id="product-6-link"><i class="bi bi-arrow-right-circle"></i> Evolving Threat Management<span></span></a>
+                <a href="#product-7" id="product-7-link"><i class="bi bi-arrow-right-circle"></i>Algorithmic Protection<span></span></a>
               </div>
             </div><!-- End Products List -->
 
@@ -178,7 +179,7 @@
             <ul>
               <li><a href="about.html">About us</a></li>
               <li><a href="productsdetails.html">Products & Solutions</a></li>
-              <li><a href="services.html">Services</a></li>
+              <li><a href="service-details.html">Services</a></li>
               <li><a href="politics.html">Terms of service</a></li>
               <li><a href="politics.html">Privacy policy</a></li>
             </ul>
@@ -187,12 +188,13 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Products & Solution</h4>
             <ul>
-              <li><a href="#">Interpretability</a></li>
-              <li><a href="#">Anonymization</a></li>
-              <li><a href="#">Compression</a></li>
-              <li><a href="#">Benchmarking</a></li>
-              <li><a href="#">GenAI Safety</a></li>
-              <li><a href="#">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-1">Interpretability</a></li>
+              <li><a href="productsdetails.html#product-2">Anonymization</a></li>
+              <li><a href="productsdetails.html#product-3">Compression</a></li>
+              <li><a href="productsdetails.html#product-4">Benchmarking</a></li>
+              <li><a href="productsdetails.html#product-5">GenAI Safety</a></li>
+              <li><a href="productsdetails.html#product-6">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-7">Algorithmic Protection</a></li>
             </ul>
           </div>
 
@@ -294,6 +296,15 @@
         },
         'product-6': {
           title: 'Evolving Threat Management',
+          content: `<p>Stay ahead of evolving threats with our proactive threat management solutions, safeguarding your AI systems and data.</p>
+                    <ul>
+                      <li><i class="bi bi-check-circle"></i> Proactive threat detection.</li>
+                      <li><i class="bi bi-check-circle"></i> Comprehensive threat management.</li>
+                      <li><i class="bi bi-check-circle"></i> Robust security protocols.</li>
+                    </ul>`
+        },
+        'product-7': {
+          title: 'Algorithmic Protection',
           content: `<p>Stay ahead of evolving threats with our proactive threat management solutions, safeguarding your AI systems and data.</p>
                     <ul>
                       <li><i class="bi bi-check-circle"></i> Proactive threat detection.</li>
