--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
               <li><a href="productsdetails.html#product-4">Benchmarking</a></li>
               <li><a href="productsdetails.html#product-5">GenAI Safety</a></li>
               <li><a href="productsdetails.html#product-6">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-7">Algorithmic Protection</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="service-details.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
