--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <p id="typewriter-drescription">Incorporating intelligent automated solutions to help new businesses be more valuable.</p>
             </blockquote>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-              <a href="#why-us" class="btn-get-started">Get Started</a>
+              <a href="#why-us" class="btn-get-started lg-12">Get Started</a>
             </div>
           </div>
         </div>
