--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <p id="typewriter-drescription">Incorporating intelligent automated solutions to help new businesses be more valuable.</p>
             </blockquote>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-              <a href="#why-us" class="btn-get-started lg-12">Get Started</a>
+              <a href="#why-us" class="btn-get-started">Get Started</a>
             </div>
           </div>
         </div>
@@ -230,7 +230,7 @@
             <div>
               <h4 class="title">Interpretability</h4>
               <p class="description">Simplify and understand your AI model with techniques for bias analysis, feature generation, and simple mathematical formulas.</p>
-              <a href="http://127.0.0.1:5500/productsdetails.html#product-1" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="./productsdetails.html#product-2" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
