--- a/about.html
+++ b/about.html
@@ -33,10 +33,10 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
-      <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/favicon.png" alt="">
+      <a href="index.html" class="logo d-flex align-items-center imagenlogo">
+        <img src="assets/img/favicon.png" class="imagenlogo-img" alt="">
         <h1 class="sitename">Ultra Deep Tech</h1>
-      </a>
+    </a>
   
       <nav id="navmenu" class="navmenu">
         <ul>
@@ -57,6 +57,7 @@
               <li><a href="productsdetails.html#product-4">Benchmarking</a></li>
               <li><a href="productsdetails.html#product-5">GenAI Safety</a></li>
               <li><a href="productsdetails.html#product-6">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-7">Algorithmic Protection</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="service-details.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -68,12 +69,10 @@
             </ul>
           </li>
   
-          <li class="dropdown"><a href=""><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Current Job Openings</a></li>
               <li><a href="#">Life at Ultra Deep Tech </a></li>
-              <li><a href="#">Hiring Process</a></li>
-              <li><a href="#">Internship and Graduate Programs</a></li>
               <li><a href="#">Employee Testimonials</a></li>
             </ul>
           </li>
