--- a/career.html
+++ b/career.html
@@ -34,56 +34,55 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
-      <a href="index.html" class="logo d-flex align-items-center">
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+      <a href="index.html" class="logo d-flex align-items-center imagenlogo">
+        <img src="assets/img/favicon.png" class="imagenlogo-img" alt="">
         <h1 class="sitename">Ultra Deep Tech</h1>
-      </a>
+    </a>
   
       <nav id="navmenu" class="navmenu">
         <ul>
           <li class="dropdown"><a href="about.html"><span>About Us</span>
             <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Company History</a></li>
-              <li><a href="#">Leadership Team</a></li>
-              <li><a href="#">Values and Ethics</a></li>
-              <li><a href="#">Corporate Social Responsibility (CSR)</a></li>
+              <li><a href="about.html#company-history">Company History</a></li>
+              <li><a href="about.html#team">Leadership Team</a></li>
+              <li><a href="about.html#values-ethics">Values and Ethics</a></li>
+              <li><a href="about.html#csr">Corporate Social Responsibility (CSR)</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="productsdetails.html"><span>Products & Solutions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Interpretability</a></li>
-              <li><a href="#">Anonymization</a></li>
-              <li><a href="#">Compression</a></li>
-              <li><a href="#">Benchmarking</a></li>
-              <li><a href="#">GenAI Safety</a></li>
-              <li><a href="#">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-1">Interpretability</a></li>
+              <li><a href="productsdetails.html#product-2">Anonymization</a></li>
+              <li><a href="productsdetails.html#product-3">Compression</a></li>
+              <li><a href="productsdetails.html#product-4">Benchmarking</a></li>
+              <li><a href="productsdetails.html#product-5">GenAI Safety</a></li>
+              <li><a href="productsdetails.html#product-6">Evolving Threat Management</a></li>
+              <li><a href="productsdetails.html#product-7">Algorithmic Protection</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="service-details.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">AI and Data Engineering Consulting</a></li>
-              <li><a href="#">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
-              <li><a href="#">Case Studies and Client Testimonials</a></li>
-              <li><a href="#">Service Packages and Pricing</a></li>
+              <li><a href="service-details.html#service-1">AI and Data Engineering Consulting</a></li>
+              <li><a href="service-details.html#service-2">Personalized Solutions for Medium, Big Companies, and Fortune 500</a></li>
+              <li><a href="service-details.html">Case Studies and Client Testimonials</a></li>
+              <li><a href="service-details.html">Service Packages and Pricing</a></li>
             </ul>
           </li>
   
-          <li class="dropdown"><a href="services.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Current Job Openings</a></li>
               <li><a href="#">Life at Ultra Deep Tech </a></li>
-              <li><a href="#">Hiring Process</a></li>
-              <li><a href="#">Internship and Graduate Programs</a></li>
               <li><a href="#">Employee Testimonials</a></li>
             </ul>
           </li>
   
           <li class="dropdown"><a href="contact.html"><span>Contact Us</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Office Locations</a></li>
-              <li><a href="#">Support and Inquiries</a></li>
-              <li><a href="#">Chat with Us</a></li>
+              <li><a href="contact.html">Office Locations</a></li>
+              <li><a href="contact.html">Support and Inquiries</a></li>
+              <li><a href="contact.html">Chat with Us</a></li>
             </ul>
           </li>
         </ul>
@@ -97,13 +96,13 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/services-page-title-bg.jpg);">
+    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/team-page-title-bg.jpg);">
       <div class="container">
-        <h1>Services</h1>
+        <h1>Career</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Services</li>
+            <li class="current">Career</li>
           </ol>
         </nav>
       </div>
@@ -114,8 +113,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Our Services</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Current Job Openings</h2>
+        <p>Our actually offers:</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -123,59 +122,33 @@
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon flex-shrink-0"><i class="bi bi-briefcase" style="color: #f57813;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-briefcase" ></i></div>
             <div>
-              <h4 class="title">Lorem Ipsum</h4>
+              <h4 class="title">Advisor</h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="readmore stretched-link"><span>See in Linked In</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon flex-shrink-0"><i class="bi bi-card-checklist" style="color: #15a04a;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-briefcase" ></i></div>
             <div>
-              <h4 class="title">Dolor Sitema</h4>
+              <h4 class="title">Advisor</h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="readmore stretched-link"><span>See in Linked In</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon flex-shrink-0"><i class="bi bi-bar-chart" style="color: #d90769;"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-briefcase" ></i></div>
             <div>
-              <h4 class="title">Sed ut perspiciatis</h4>
+              <h4 class="title">Advisor</h4>
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
+              <a href="#" class="readmore stretched-link"><span>See in Linked In</span><i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon flex-shrink-0"><i class="bi bi-binoculars" style="color: #15bfbc;"></i></div>
-            <div>
-              <h4 class="title">Magni Dolores</h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-brightness-high" style="color: #f5cf13;"></i></div>
-            <div>
-              <h4 class="title">Nemo Enim</h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div><!-- End Service Item -->
-
-          <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week" style="color: #1335f5;"></i></div>
-            <div>
-              <h4 class="title">Eiusmod Tempor</h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-              <a href="#" class="readmore stretched-link"><span>Learn More</span><i class="bi bi-arrow-right"></i></a>
-            </div>
-          </div><!-- End Service Item -->
 
         </div>
 
@@ -265,7 +238,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Testimonials</h2>
+        <h2>Employee Testimonials</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
