--- a/about.html
+++ b/about.html
@@ -71,9 +71,9 @@
   
           <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Current Job Openings</a></li>
-              <li><a href="#">Life at Ultra Deep Tech </a></li>
-              <li><a href="#">Employee Testimonials</a></li>
+              <li><a href="career.html">Current Job Openings</a></li>
+              <li><a href="career.html">Life at Ultra Deep Tech </a></li>
+              <li><a href="career.html">Employee Testimonials</a></li>
             </ul>
           </li>
   
