--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 </head>
 
 <body class="contact-page">
-  
+
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
   
@@ -72,9 +72,9 @@
   
           <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Current Job Openings</a></li>
-              <li><a href="#">Life at Ultra Deep Tech </a></li>
-              <li><a href="#">Employee Testimonials</a></li>
+              <li><a href="career.html">Current Job Openings</a></li>
+              <li><a href="career.html">Life at Ultra Deep Tech </a></li>
+              <li><a href="career.html">Employee Testimonials</a></li>
             </ul>
           </li>
   
