--- a/productsdetails.html
+++ b/productsdetails.html
@@ -69,13 +69,11 @@
             </ul>
           </li>
   
-          <li class="dropdown"><a href=""><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li class="dropdown"><a href="career.html"><span>Career</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Current Job Openings</a></li>
-              <li><a href="#">Life at Ultra Deep Tech </a></li>
-              <li><a href="#">Hiring Process</a></li>
-              <li><a href="#">Internship and Graduate Programs</a></li>
-              <li><a href="#">Employee Testimonials</a></li>
+              <li><a href="career.html">Current Job Openings</a></li>
+              <li><a href="career.html">Life at Ultra Deep Tech </a></li>
+              <li><a href="career.html">Employee Testimonials</a></li>
             </ul>
           </li>
   
